--- a/package.json
+++ b/package.json
@@ -25,11 +25,22 @@
   },
   "homepage": "https://github.com/TeamFirstCapstone/Pet-Meeting-Server#readme",
   "dependencies": {
+    "bcrypt": "^3.0.0",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.3",
     "cors": "^2.8.5",
+    "errorhandler": "^1.4.3",
     "express": "^4.17.1",
+    "express-error-handler": "^1.1.0",
+    "express-session": "^1.14.2",
     "express-validator": "^6.6.1",
-    "mysql": "^2.18.1"
+    "http-proxy-middleware": "^1.0.5",
+    "jsonwebtoken": "^7.4.2",
+    "mysql": "^2.18.1",
+    "mysql2": "^1.6.1",
+    "path": "^0.12.7",
+    "sequelize": "^4.38.0",
+    "serve-static": "^1.11.1"
   },
   "devDependencies": {
     "jest": "^26.4.2",
